--- a/index.html
+++ b/index.html
@@ -25,10 +25,24 @@
                 <p>Yeees! See you on the 14th, Princess.</p>
             </div>
         </div>
+        <button id="detailsButton" style="display:none;">details</button>
+
+        <div id="detailsBox" style="display:none;" class="details-box">
+            <br>
+            <p><strong>Your Valentine's Day date with Thatcher Auten has been set!</strong></p>
+            <p>Date: February 14, 2026</p>
+            <p>Pickup Location: Smurthwaite Scholarship Hall</p>
+            <p>Pickup Time: 6:15 PM Central Time</p>
+            <p>Reservation Location: UMI Japanese Steakhouse and Sushi Bar</p>
+            <p>Reservation Time: 6:30 PM Central Time</p>
+            <p>Suggested Attire: Whatever you want — you're beautiful af 😍💯</p>
+            <p>(He will be wearing jeans and a lavender linen short-sleeve button-up)</p>
+        </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script>
-        (function() {
+        (function () {
             emailjs.init("mg3C0sHNkEO4VPmlC");
         })();
     </script>
