--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 <button onclick="showMessage('Yes')" id="yesButton">yes</button>
             </div>
 
-            <!-- <div class="hidden-message" id="no-message">
+            <div class="hidden-message" id="no-message">
                 <p>Nice try, but you can't escape that easily!</p>
             </div>
             <div class="hidden-message" id="yes-message">
                 <p>Yeees! See you on the 14th, Princess.</p>
-            </div> -->
+            </div>
             <button id="detailsButton" style="display:none;">details</button>
 
             <div id="detailsBox" style="display:none;" class="details-box">
