--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="hidden-message" id="yes-message">
                 <p>Yeees! See you on the 14th, Princess.</p>
             </div>
-            <button id="detailsButton" style="display:none;">details</button>
+            <!-- <button id="detailsButton" style="display:none;">details</button>
 
             <div id="detailsBox" style="display:none;" class="details-box">
                 <br>
@@ -38,7 +38,7 @@
                 <p>Reservation Time: 6:30 PM Central Time</p>
                 <p>Suggested Attire: Whatever you want — you're beautiful af 😍💯</p>
                 <p>(He will be wearing jeans and a lavender linen short-sleeve button-up)</p>
-            </div>
+            </div> -->
         </div>
         
 
